# PureMVC-iOS

./: CLAUDE.md  Package.swift  README.md
.github/workflows/: ci.yml
Bridge/: KeychainSecureStore.hpp  KeychainSecureStore.mm  PMVCAuthClient.mm  PMVCKeychainTokenStore.mm
Bridge/include/PureMVCBridge/: PMVCAuthClient.h  PMVCKeychainTokenStore.h
Core/: CMakeLists.txt  README.md
Core/Domain/: AuthTypes.hpp
Core/Domain/Entities/: Token.hpp  User.hpp
Core/Domain/Ports/: IAuthRepository.hpp  IExecutor.hpp  ITokenStore.hpp
Core/Domain/UseCases/: LoginUseCase.cpp  LoginUseCase.hpp
Core/Infrastructure/Auth/: AuthRepository.cpp  AuthRepository.hpp
Core/Infrastructure/Concurrency/: ThreadExecutor.hpp
Core/Infrastructure/Http/: HttpClientConfig.hpp  HttpError.hpp  HttpTypes.hpp  HttplibHttpClient.cpp  HttplibHttpClient.hpp  IHttpClient.hpp  MockHttpClient.hpp
Core/Infrastructure/Security/: Base64.hpp  CertificatePinner.hpp  ISecureStorage.hpp  KeychainSecureStore.mm  SecureTokenStore.cpp  SecureTokenStore.hpp
Core/tests/: AuthRepositoryTests.cpp  Base64Tests.cpp  CertificatePinnerTests.cpp  ExecutorTests.cpp  HttpClientConfigTests.cpp  HttplibHttpClientTests.cpp  LoginUseCaseTests.cpp  MockHttpClientTests.cpp  SecureTokenStoreTests.cpp
Core/tests/Mocks/: FakeAuthRepository.hpp  FakeHttpClient.hpp  FakeSecureStore.hpp  FakeTokenStore.hpp  SyncExecutor.hpp
PureMVC/: AppDelegate.swift  PureMVC-Bridging-Header.h  SceneDelegate.swift  ViewController.swift
PureMVC.xcodeproj/: project.pbxproj
PureMVC.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
PureMVC.xcodeproj/project.xcworkspace/xcuserdata/prank.xcuserdatad/: UserInterfaceState.xcuserstate
PureMVC.xcodeproj/xcuserdata/prank.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
PureMVC.xcodeproj/xcuserdata/prank.xcuserdatad/xcschemes/: xcschememanagement.plist
PureMVC/Base.lproj/: Main.storyboard
PureMVC/Command/: AppAuthClient.h  AppAuthClient.mm  LoginCommand.h  LoginCommand.mm
PureMVC/Constants/: PureMVCConstants.h
PureMVC/Helper/: StringHelper.h  string_helper.h
PureMVC/Libs/PureMVC.xcframework/: Info.plist
PureMVC/Libs/PureMVC.xcframework/ios-arm64/Headers/PureMVC/: PureMVC.hpp
PureMVC/Libs/include/PureMVC/Patterns/Facade/: Facade.hpp
PureMVC/Model/: UserProxy.cpp  UserProxy.h
PureMVC/Network/: NetworkManager.cpp  NetworkManager.h  http_errors.h
PureMVC/Network/Provider/: user_token_provider.h
PureMVC/Wrapper/: PureMVCConstantsWrapper.h  PureMVCConstantsWrapper.mm  PureMVCWrapper.h  PureMVCWrapper.mm
PureMVCTests/: PureMVCTests.swift
PureMVCUITests/: PureMVCUITests.swift  PureMVCUITestsLaunchTests.swift
Tests/PureMVCBridgeTests/: AuthClientSmokeTests.swift  BridgeSmokeTests.swift
android/: .gitignore  README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/codetoanbug/androidpuremvc/: AndroidAuthClientTest.kt  ExampleInstrumentedTest.kt  PureMVCCoreTest.kt  SecureStorageTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/java/com/codetoanbug/androidpuremvc/: AndroidAuthClient.kt  MainActivity.kt  PureMVCCore.kt  SecureStorage.kt
android/app/src/main/java/com/codetoanbug/androidpuremvc/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/codetoanbug/androidpuremvc/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
android/openssl/: build-openssl.sh
docs/: cross-platform-core.md  ios-integration-plan.md
